--- a/src/app/components/views/categoria/categoria-update/categoria-update.component.html
+++ b/src/app/components/views/categoria/categoria-update/categoria-update.component.html
@@ -12,8 +12,8 @@
     </mat-form-field>
 
     <div class="buttons">
-        <button (click) = "update" class="mat-elevation-z8" mat-stroked-button color="primary"> ATUALIZAR </button>
-        <button (click) = "cancel" class="mat-elevation-z8" mat-stroked-button color="warn"> CANCELAR </button>
+        <button (click) = "update()" class="mat-elevation-z8" mat-stroked-button color="primary"> ATUALIZAR </button>
+        <button (click) = "cancel()" class="mat-elevation-z8" mat-stroked-button color="warn"> CANCELAR </button>
     </div>
 
 </form>
