--- a/src/app/components/views/livro/livro-read/livro-read.component.html
+++ b/src/app/components/views/livro/livro-read/livro-read.component.html
@@ -11,6 +11,6 @@
     </mat-card>
 
     <mat-card class="home mat-elevation-z4">
-        <mat-card-subtitle class="subtitle">{{ livro.texto }}</mat-card-subtitle>
+        <mat-card-subtitle class="subtitle" style="text-align: justify;">{{ livro.texto }}</mat-card-subtitle>
     </mat-card>
 </form>
